--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
   },
   "devDependencies": {
     "prettier": "^2.8.3",
-    "prettier-plugin-astro": "^0.7.2"
+    "prettier-plugin-astro": "^0.7.2",
+    "prettier-plugin-tailwindcss": "^0.2.1"
   }
 }
